# polyfem

./: .gitignore  CMakeLists.txt  _a_l_n_l_problem_8cpp__incl.md5  _a_l_n_l_problem_8cpp_source.html  _a_l_n_l_problem_8hpp__incl.md5  _a_l_n_l_problem_8hpp_source.html  _assembler_8cpp.html  _assembler_8cpp__incl.map  _assembler_8cpp__incl.md5  _assembler_8cpp_source.html  _assembler_8hpp_source.html  _assembler_utils_8cpp.html  _assembler_utils_8cpp__incl.map  _assembler_utils_8cpp__incl.md5  _assembler_utils_8cpp_source.html  _assembler_utils_8hpp.html  _assembler_utils_8hpp__incl.map  _assembler_utils_8hpp__incl.md5  _assembler_utils_8hpp_source.html  _backtracking_line_search_8hpp_source.html  _basis_8cpp_source.html  _basis_8hpp.html  _basis_8hpp.js  _basis_8hpp_source.html  _elastic_problem_8cpp__incl.md5  _elastic_problem_8cpp_source.html  _elastic_problem_8hpp.html  _elastic_problem_8hpp__incl.map  _elastic_problem_8hpp__incl.md5  _elasticity_utils_8cpp_source.html  _element_assembly_values_8cpp_source.html  _element_bases_8cpp_source.html  _f_e_bio_reader_8cpp__incl.md5  _f_e_bio_reader_8cpp_source.html  _f_e_bio_reader_8hpp__incl.md5  _franke_problem_8cpp.html  _franke_problem_8cpp__incl.map  _franke_problem_8cpp__incl.md5  _franke_problem_8hpp.html  _franke_problem_8hpp__incl.map  (+284 more)
src/polyfem/solver/: CMakeLists.txt  FullNLProblem copy.cpp  FullNLProblem.cpp  LBFGSSolver.hpp  NLProblem.cpp  NonlinearSolver.cu  NonlinearSolver.hpp  NonlinearSolver.tpp  SolveData.cpp  SolveData.hpp  SparseNewtonDescentSolver.cu  SparseNewtonDescentSolver.hpp  SparseNewtonDescentSolver.tpp
src/polyfem/solver/forms/: BodyForm.cpp  BodyForm.hpp  ElasticForm.cpp  ElasticForm.hpp  FrictionForm.cpp
src/polyfem/solver/line_search/: BacktrackingLineSearch.cu  CMakeLists.txt  (+3 more)
(+84 files in other folders)
